[gd_scene load_steps=22 format=3 uid="uid://dknxotbcrytcs"]

[ext_resource type="Script" uid="uid://dff37uied0yv8" path="res://game.gd" id="1_j5wjh"]
[ext_resource type="Script" uid="uid://cyuyfumpe4tkw" path="res://ui.gd" id="2_vef74"]
[ext_resource type="Script" uid="uid://cj1moslussd0r" path="res://world.gd" id="3_hve3p"]
[ext_resource type="Texture2D" uid="uid://cnv5ogsw7cl2r" path="res://assets/shuffle75pressed.png" id="3_mfdv2"]
[ext_resource type="Texture2D" uid="uid://bgpehx85u4oo2" path="res://assets/shuffle75.png" id="4_iotsf"]
[ext_resource type="Script" uid="uid://bn2v5r1c1fmnu" path="res://rubiks_cube.gd" id="4_mfdv2"]
[ext_resource type="Script" uid="uid://bcyvnv4bc2joe" path="res://pivot.gd" id="5_iotsf"]
[ext_resource type="Texture2D" uid="uid://boocgkjh3r2wn" path="res://assets/cancel75.png" id="5_lc2xo"]
[ext_resource type="Texture2D" uid="uid://yevb552t60ls" path="res://assets/ok75.png" id="5_mfdv2"]
[ext_resource type="Script" uid="uid://cvlafvx42vlmu" path="res://arrows.gd" id="6_lc2xo"]
[ext_resource type="Script" uid="uid://chk6eg4huwbvs" path="res://camera_pivot.gd" id="7_215e1"]
[ext_resource type="Script" uid="uid://b5yke2pp1xypg" path="res://camera.gd" id="8_7sc4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iotsf"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_iotsf"]
font_size = 30
font_color = Color(1, 0.313726, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lc2xo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_215e1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sc4i"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.588235, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80cx4"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iotsf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa8c5"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0.5, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lc2xo"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0.701961, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Game" type="Node"]
script = ExtResource("1_j5wjh")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("2_vef74")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NewGame" type="TextureButton" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Scramble"
texture_normal = ExtResource("4_iotsf")
texture_pressed = ExtResource("3_mfdv2")
stretch_mode = 4

[node name="NewGamePanel" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -187.0
offset_right = 89.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iotsf")

[node name="MarginContainer" type="MarginContainer" parent="UI/NewGamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/NewGamePanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"
label_settings = SubResource("LabelSettings_iotsf")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="SizeLabel" type="Label" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cube Size: 3"
horizontal_alignment = 1

[node name="SizeSlider" type="HSlider" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
max_value = 10.0
value = 3.0
rounded = true

[node name="HSeparator2" type="HSeparator" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="ScramblingLabel" type="Label" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Scrambling Moves: 40"
horizontal_alignment = 1

[node name="ScramblingSlider" type="HSlider" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 40.0
rounded = true

[node name="HSeparator3" type="HSeparator" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="TweenLabel" type="Label" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Animation Length: 0.25s"
horizontal_alignment = 1

[node name="TweenSlider" type="HSlider" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.25

[node name="HSeparator4" type="HSeparator" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="UI/NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_215e1")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sc4i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_80cx4")
theme_override_styles/normal = SubResource("StyleBoxFlat_7sc4i")
text = "CANCEL"
icon = ExtResource("5_lc2xo")
expand_icon = true

[node name="OK" type="Button" parent="UI/NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iotsf")
theme_override_styles/hover = SubResource("StyleBoxFlat_xa8c5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lc2xo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xa8c5")
text = "OK"
icon = ExtResource("5_mfdv2")
expand_icon = true

[node name="World" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hve3p")

[node name="RubiksCube" type="Node3D" parent="World"]
unique_name_in_owner = true
script = ExtResource("4_mfdv2")

[node name="Boxes" type="Node3D" parent="World/RubiksCube"]
unique_name_in_owner = true

[node name="Pivot" type="Node3D" parent="World/RubiksCube"]
unique_name_in_owner = true
script = ExtResource("5_iotsf")

[node name="Arrows" type="Node3D" parent="World"]
unique_name_in_owner = true
script = ExtResource("6_lc2xo")

[node name="CameraPivot" type="Node3D" parent="World"]
transform = Transform3D(0.866026, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 0, 0)
script = ExtResource("7_215e1")

[node name="Camera" type="Camera3D" parent="World/CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
current = true
script = ExtResource("8_7sc4i")

[connection signal="new_game" from="UI" to="." method="_on_ui_new_game"]
[connection signal="pressed" from="UI/MarginContainer/NewGame" to="UI" method="_on_new_game_pressed"]
[connection signal="value_changed" from="UI/NewGamePanel/MarginContainer/VBoxContainer/SizeSlider" to="UI" method="_on_size_slider_value_changed"]
[connection signal="value_changed" from="UI/NewGamePanel/MarginContainer/VBoxContainer/ScramblingSlider" to="UI" method="_on_scrambling_slider_value_changed"]
[connection signal="value_changed" from="UI/NewGamePanel/MarginContainer/VBoxContainer/TweenSlider" to="UI" method="_on_tween_slider_value_changed"]
[connection signal="pressed" from="UI/NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="UI" method="_on_new_game_cancel_pressed"]
[connection signal="pressed" from="UI/NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer/OK" to="UI" method="_on_new_game_ok_pressed"]
[connection signal="clicked" from="World/Arrows" to="World/RubiksCube" method="_on_arrows_clicked"]
