[gd_scene load_steps=24 format=3 uid="uid://vyvu0gq6q5xk"]

[ext_resource type="Script" uid="uid://cyuyfumpe4tkw" path="res://scenes/game/UI/ui.gd" id="1_lj5up"]
[ext_resource type="Resource" uid="uid://dgyyooy8jevvs" path="res://config.tres" id="2_1p530"]
[ext_resource type="Texture2D" uid="uid://bgpehx85u4oo2" path="res://assets/shuffle75.png" id="2_wgnrc"]
[ext_resource type="Texture2D" uid="uid://cnv5ogsw7cl2r" path="res://assets/shuffle75pressed.png" id="3_84lt7"]
[ext_resource type="Texture2D" uid="uid://boocgkjh3r2wn" path="res://assets/cancel75.png" id="4_2ttv2"]
[ext_resource type="Texture2D" uid="uid://de1pexsyxa7pq" path="res://assets/settings75.png" id="4_dhitd"]
[ext_resource type="Texture2D" uid="uid://yevb552t60ls" path="res://assets/ok75.png" id="5_u6q2i"]
[ext_resource type="Texture2D" uid="uid://drm7qx0x6scea" path="res://assets/settings75pressed.png" id="5_ydonv"]
[ext_resource type="Texture2D" uid="uid://bwog53vpkooh4" path="res://assets/zoom_in50.png" id="6_d5j55"]
[ext_resource type="PackedScene" uid="uid://dw6vahsano2yk" path="res://scenes/label_slider/label_slider.tscn" id="6_ydonv"]
[ext_resource type="Texture2D" uid="uid://dydpbjqwigfvi" path="res://assets/zoom_in50pressed.png" id="7_1p530"]
[ext_resource type="Texture2D" uid="uid://bwdakspwm64yb" path="res://assets/zoom_out50.png" id="8_v0fiw"]
[ext_resource type="Texture2D" uid="uid://bysv816k3mqbn" path="res://assets/zoom_out50pressed.png" id="9_xqeyu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iotsf"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_mjckw"]
font_size = 30
font_color = Color(0.5, 0.5, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lc2xo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_215e1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sc4i"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.588235, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80cx4"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iotsf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa8c5"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0.5, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lc2xo"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0.701961, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_iotsf"]
font_size = 30
font_color = Color(1, 0.453333, 0.2, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_lj5up")
config = ExtResource("2_1p530")

[node name="TopRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 85.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Options" type="TextureButton" parent="TopRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Options"
texture_normal = ExtResource("4_dhitd")
texture_pressed = ExtResource("5_ydonv")
stretch_mode = 4

[node name="BottomRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NewGame" type="TextureButton" parent="BottomRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "New Game"
texture_normal = ExtResource("2_wgnrc")
texture_pressed = ExtResource("3_84lt7")
stretch_mode = 4

[node name="BottomLeft" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 60.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeft"]
layout_mode = 2

[node name="ZoomIn" type="TextureButton" parent="BottomLeft/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Zoom In"
texture_normal = ExtResource("6_d5j55")
texture_pressed = ExtResource("7_1p530")
stretch_mode = 4

[node name="ZoomOut" type="TextureButton" parent="BottomLeft/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Zomm Out"
texture_normal = ExtResource("8_v0fiw")
texture_pressed = ExtResource("9_xqeyu")
stretch_mode = 4

[node name="NewGamePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -187.0
offset_right = 89.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iotsf")

[node name="MarginContainer" type="MarginContainer" parent="NewGamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="NewGamePanel/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"
label_settings = SubResource("LabelSettings_mjckw")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="SizeSlider" parent="NewGamePanel/MarginContainer/VBoxContainer" instance=ExtResource("6_ydonv")]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
max_value = 10.0
value = 3.0
message = "Cube Size: %.0f"

[node name="HSeparator2" type="HSeparator" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="ScramblingSlider" parent="NewGamePanel/MarginContainer/VBoxContainer" instance=ExtResource("6_ydonv")]
unique_name_in_owner = true
layout_mode = 2
value = 30.0
message = "Scrambling Moves: %.0f"

[node name="HSeparator4" type="HSeparator" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="HBoxContainer" type="HBoxContainer" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_215e1")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sc4i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_80cx4")
theme_override_styles/normal = SubResource("StyleBoxFlat_7sc4i")
text = "CANCEL"
icon = ExtResource("4_2ttv2")
expand_icon = true

[node name="OK" type="Button" parent="NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iotsf")
theme_override_styles/hover = SubResource("StyleBoxFlat_xa8c5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lc2xo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xa8c5")
text = "OK"
icon = ExtResource("5_u6q2i")
expand_icon = true

[node name="OptionsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -133.0
offset_right = 155.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iotsf")

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_iotsf")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="AnimationLength" parent="OptionsPanel/MarginContainer/VBoxContainer" instance=ExtResource("6_ydonv")]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.25
message = "Animation Length: %.2fs"

[node name="HSeparator4" type="HSeparator" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_lc2xo")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_215e1")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sc4i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_80cx4")
theme_override_styles/normal = SubResource("StyleBoxFlat_7sc4i")
text = "CANCEL"
icon = ExtResource("4_2ttv2")
expand_icon = true

[node name="OK" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iotsf")
theme_override_styles/hover = SubResource("StyleBoxFlat_xa8c5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lc2xo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xa8c5")
text = "OK"
icon = ExtResource("5_u6q2i")
expand_icon = true

[connection signal="pressed" from="TopRight/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="BottomRight/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="BottomLeft/VBoxContainer/ZoomIn" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="BottomLeft/VBoxContainer/ZoomOut" to="." method="_on_zoom_out_pressed"]
[connection signal="pressed" from="NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_new_game_cancel_pressed"]
[connection signal="pressed" from="NewGamePanel/MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_new_game_ok_pressed"]
[connection signal="pressed" from="OptionsPanel/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_options_cancel_pressed"]
[connection signal="pressed" from="OptionsPanel/MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_options_ok_pressed"]
